--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <h1>Hi</h1>
+    <head><h1>My resume</h1></head>
+   
+   <body>
+<h2>Hi there</h2>
+<p>this is my resume. I am a software developer</p>
+   </body>
 </html>
