--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head><h1>My resume</h1></head>
-   
+    <head>
+        <h3>Hey there!</h3>
+        <h2>Sudeshna Bose here</h2>
+        <p>Hope your day’s going amazing!!</p>
+    </head>
    <body>
-<h2>Hi there</h2>
-<p>this is my resume. I am a software developer</p>
+<p>Full Stack JavaScript Developer (Backend-focused) with 4 years’ experience in Node.js, MongoDB, Docker, Redis, Kafka, and Elasticsearch. Proven ability to optimize performance and handle large-scale data in enterprise environments.</p>
    </body>
 </html>
