--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html >
     <head>
+        <link rel="stylesheet" href="style.css"/>
         <h3>Hey there!</h3>
         <h2>Sudeshna Bose here</h2>
         <p>Hope your day’s going amazing!!</p>
     </head>
-    <body>
+    <body class="background-image">
         <h4>PROFESSIONAL SUMMARY </h4>
         <p>Full Stack JavaScript Developer (Backend-focused) with 4 years’ experience in Angular, Node.js, MongoDB, Docker, Redis, Kafka, and Elasticsearch. Proven ability to optimize performance and handle large-scale data in enterprise environments.</p>
         <h4>TECHNICAL SKILLS </h4>
