--- a/index.html
+++ b/index.html
@@ -1,61 +1,63 @@
 <!DOCTYPE html>
 <html >
-    <head>
-        <link rel="stylesheet" href="style.css"/>
-        <h3>Hey there!</h3>
-        <h2>Sudeshna Bose here</h2>
-        <p>Hope your day’s going amazing!!</p>
-    </head>
-    <body class="background-image">
-        <h4>PROFESSIONAL SUMMARY </h4>
-        <p>Full Stack JavaScript Developer (Backend-focused) with 4 years’ experience in Angular, Node.js, MongoDB, Docker, Redis, Kafka, and Elasticsearch. Proven ability to optimize performance and handle large-scale data in enterprise environments.</p>
-        <h4>TECHNICAL SKILLS </h4>
-        <ul>
-            <li>Languages & Frameworks: JavaScript (ES6+), Node.js, React.js, AngularJS, HTML5, CSS3, </li>
-            <li>Shell Script </li>
-            <li>Databases: MongoDB, MySQL, Redis </li>
-            <li>Messaging & Streaming: Kafka </li>
-            <li>DevOps & Tools: Docker, GitHub, Postman, Kibana </li>
-            <li>Search & Analytics: Elasticsearch </li>
-            <li>Methodologies: Agile (Scrum), SDLC </li>
-        </ul>
-        <h4>KEY SKILLS </h4>
-        <ul>
-            <li>Backend Development & RESTful API Design </li>
-            <li>Database Optimization & Query Performance (MongoDB, MySQL, Redis)</li> 
-            <li>Large-Scale Data Processing (100M+ records/month) </li>
-            <li>Job Automation & System Performance Optimization </li>
-            <li>Logging & Monitoring (Kibana, Elasticsearch) </li>
-            <li>Microservices & Scalable Architecture </li>
-            <li>Agile Team Collaboration </li>
-        </ul>
-        <h4>PROFESSIONAL EXPERIENCE </h4>
-        <h4>Software Developer </h4>
-        <h5>Litmus World Marketing Technologies – Bangalore | Sept 2021 – Present </h5>
-        <ul>
-            <li>Developed and maintained scalable backend services using Node.js and MongoDB. </li>
-            <li>Automated scheduled background jobs, improving system performance by 25%. </li>
-            <li>Debugged and resolved production issues ensuring 98% on-time feature delivery. </li>
-            <li>Designed RESTful APIs and integrated Elasticsearch for optimized search. </li>
-            <li>Collaborated with QA and product teams in Agile sprints for successful deployments. </li>
-            <li>Worked with high-volume datasets (100M+ records/month across 1000+ projects). </li>
-        </ul>
-        <h5>Project Highlights: </h5>
-        <ul>
-            <li>NPS-driven SaaS platform for customer & employee experience measurement. </li>
-            <li>Served enterprise clients including HDFC, Reliance, Air Asia, Titan, Kotak Group, SBI Life, TVS, Godrej, handling data at scale. </li>
-        </ul>
-        <h4>Software Development Intern </h4>
-        <h5>Wikiance Pvt Ltd – Kolkata | Aug 2020 – May 2021 </h5>
-        <ul>
-            <li>Built interactive frontend components with React.js and modern CSS practices. </li>
-            <li>Developed server-side APIs in Node.js and contributed to platform enhancements. </li>
-            <li>Participated in debugging, testing, and deployment of new features. </li>
-        </ul>
-        <h4>EDUCATION </h4>
-        <ul>
-            <li>Master of Computer Applications (MCA) – Jyoti Nivas College, Bangalore (2018 – 2021) </li>
-            <li>Bachelor of Science (B.Sc.) – Serampore Girls’ College, Serampore (2014 – 2018)  </li>
-        </ul>
-    </body>
+    <div class="main_div">
+        <head>
+            <link rel="stylesheet" href="style.css"/>
+            <div class="header_sec"><h2 id="head_name">Sudeshna Bose</h2>
+            <h5 class="details">Bangalore, India | sudeshnabose95@gmail.com | +91-7003029972 | linkedin.com/in/sudeshnabose2403 </h5>
+        </div>
+        </head>
+        <body>
+            <h4 class="section_name">PROFESSIONAL SUMMARY </h4>
+            <p>Full Stack JavaScript Developer (Backend-focused) with 4 years of experience in Angular, Node.js, MongoDB, Docker, Redis, Kafka, and Elasticsearch. Proven ability to optimize performance and handle large-scale data in enterprise environments.</p>
+            <h4>TECHNICAL SKILLS </h4>
+            <ul>
+                <li>Languages & Frameworks: JavaScript (ES6+), Node.js, React.js, AngularJS, HTML5, CSS3, </li>
+                <li>Shell Script </li>
+                <li>Databases: MongoDB, MySQL, Redis </li>
+                <li>Messaging & Streaming: Kafka </li>
+                <li>DevOps & Tools: Docker, GitHub, Postman, Kibana </li>
+                <li>Search & Analytics: Elasticsearch </li>
+                <li>Methodologies: Agile (Scrum), SDLC </li>
+            </ul>
+            <h4 class="section_name">KEY SKILLS </h4>
+            <ul>
+                <li>Backend Development & RESTful API Design </li>
+                <li>Database Optimization & Query Performance (MongoDB, MySQL, Redis)</li> 
+                <li>Large-Scale Data Processing (100M+ records/month) </li>
+                <li>Job Automation & System Performance Optimization </li>
+                <li>Logging & Monitoring (Kibana, Elasticsearch) </li>
+                <li>Microservices & Scalable Architecture </li>
+                <li>Agile Team Collaboration </li>
+            </ul>
+            <h4 class="section_name">PROFESSIONAL EXPERIENCE </h4>
+            <h4>Software Developer </h4>
+            <h5>Litmus World Marketing Technologies – Bangalore | Sept 2021 – Present </h5>
+            <ul>
+                <li>Developed and maintained scalable backend services using Node.js and MongoDB. </li>
+                <li>Automated scheduled background jobs, improving system performance by 25%. </li>
+                <li>Debugged and resolved production issues ensuring 98% on-time feature delivery. </li>
+                <li>Designed RESTful APIs and integrated Elasticsearch for optimized search. </li>
+                <li>Collaborated with QA and product teams in Agile sprints for successful deployments. </li>
+                <li>Worked with high-volume datasets (100M+ records/month across 1000+ projects). </li>
+            </ul>
+            <h5>Project Highlights: </h5>
+            <ul>
+                <li>NPS-driven SaaS platform for customer & employee experience measurement. </li>
+                <li>Served enterprise clients including HDFC, Reliance, Air Asia, Titan, Kotak Group, SBI Life, TVS, Godrej, handling data at scale. </li>
+            </ul>
+            <h4 class="section_name">Software Development Intern </h4>
+            <h5>Wikiance Pvt Ltd – Kolkata | Aug 2020 – May 2021 </h5>
+            <ul>
+                <li>Built interactive frontend components with React.js and modern CSS practices. </li>
+                <li>Developed server-side APIs in Node.js and contributed to platform enhancements. </li>
+                <li>Participated in debugging, testing, and deployment of new features. </li>
+            </ul>
+            <h4 class="section_name">EDUCATION </h4>
+            <ul>
+                <li>Master of Computer Applications (MCA) – Jyoti Nivas College, Bangalore (2018 – 2021) </li>
+                <li>Bachelor of Science (B.Sc.) – Serampore Girls’ College, Serampore (2014 – 2018)  </li>
+            </ul>
+        </body>
+    </div>
 </html>
